Bugfix: Fix the problem when the space is not enough for text wrapping

--- a/components/react/Form/SelectorV2/selector.css
+++ b/components/react/Form/SelectorV2/selector.css
@@ -68,7 +68,7 @@
 }
 
 .valueWrapper {
-  flex: 1;
+  flex: 1 0 auto;
   position: relative;
 }
 
